--- a/tpFinal.css
+++ b/tpFinal.css
@@ -57,6 +57,40 @@
 }
 
 
+footer {
+    background-color: #f8f9fa;
+    padding: 50px 0;
+  }
+
+  footer h4 {
+    color: #343a40;
+    margin-bottom: 20px;
+  }
+  footer ul li {
+    margin-bottom: 10px;
+  }
+  footer ul li a img {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+  }
+  footer ul.list-inline li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  footer ul.list-unstyled li a {
+    color: #6c757d;
+    text-decoration: none;
+  }
+  footer ul.list-unstyled li a:hover {
+    color: #343a40;
+  }
+  footer p {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #6c757d;
+  }
+
 
 @media all and (max-width:767px) and (min-width:524px){
     .menu{
@@ -65,12 +99,21 @@
         justify-content: center;
     }
 }
-
+@media all and (max-width:767px){
+    .redes_sociales{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        
+        text-align: center;
+       }
+}
 @media all and (max-width:727px){
    #destinos{
     padding-left: 1em !important;
     padding-right: 1em !important;
    }
+   
     .card{
     width: 95% !important;
     
@@ -83,7 +126,12 @@
     }
 }
 @media all and (max-width:380px){
-    .menu{
+    .redes_sociales ul{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .menu {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -96,3 +144,4 @@
         text-align: center;
     }
 }
+
